syntax = "proto3";
package kaze;

message Hdr {
  string bodyType = 1;
  uint32 srcIdent = 2;
  uint32 seq = 3;
  uint32 ack = 4;

  oneof routeType {
    // send pkg to dstIdent
    uint32 dstIdent = 5;
    // send pkg to one of idents that match ident with mask
    DstMask dstRandom = 6;
    // send pkg to all idents that match ident with mask
    DstMask dstBroadcast = 7;
    // send pkg to all idents that match ident with mask
    DstMulticast dstMulticast = 8;
  }

  // ident selector with mask. only match if dstIdent & mask == ident
  message DstMask {
    uint32 ident = 1;
    uint32 mask = 2;
  }

  message DstMulticast {
    // all idents that the pkg will be sent to
    repeated uint32 dstIdents = 1;
  }

  map<string, string> headers = 9;
  uint32 retCode = 10;
  uint32 version = 11;
}
